# Tree-Sitterpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
inc/: tspp
inc/tree-sitterpp/: helpers.hpp  language.hpp  node.hpp  parser.hpp  tree.hpp  tree_cursor.hpp
inc/tree-sitterpp/languages/: cpp.hpp
src/: cpp_example.cpp
